--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
         <app-form-field>
             <app-label>Field 2</app-label>
             <app-textfield name="field2" [value]="data.group.field2" [group]="group"></app-textfield>
-            <app-suffix>deg</app-suffix>
+            <app-suffix>decg</app-suffix>
         </app-form-field>
     </app-form-group>
     <app-form-field>
